# libgeotiff

./: .appveyor.yml  .travis.yml  README.md
.github/: README.md  environment.yml
.github/workflows/: ci-windows.yml  test.yml
CVSROOT/: checkoutlist  ciabot_cvs.pl  ciabot_cvs_gdal.pl  loginfo  modules
geotiff/: welcome.txt
geotiff/code/: 0README
geotiff/code/win_nt/: 0README.TXT  NTextra.tgz
geotiff/html/: agenda.html  faq.html  geotifcp.html  geotiff-web_2.tar  geotiff.html  index.html  listgeo.html  providers.html  refresh_from_libgeotiff.sh  rpc_prop.html  software.html  usgs_geotiff.html
geotiff/html/api/: GTIFFree.html  GTIFGetDefn.html  GTIFKeyGet.html  GTIFKeySet.html  GTIFNew.html  GTIFWriteKeys.html  SetCSVFilenameHook.html  XTIFFClose.html  XTIFFOpen.html  annotated.html  classes.html  cpl__serv_8h_source.html  cpl_csv_c-source.html  cpl_csv_h-source.html  cpl_csv_incode_c-source.html  cpl_serv_c-source.html  cpl_serv_h-source.html  defs_h-source.html  files.html  functions.html  functions_vars.html  geo__config_8h_source.html  geo__incode__defs_8h_source.html  geo__keyp_8h_source.html  geo__normalize_8h.html  geo__normalize_8h_source.html  geo__simpletags_8h_source.html  geo__tiffp_8h_source.html  geo_config_h-source.html  geo_extra_c-source.html  geo_free_c-source.html  geo_get_c-source.html  geo_keyp_h-source.html  geo_names_c-source.html  geo_new_c-source.html  geo_normalize_c-source.html  geo_normalize_h-source.html  geo_normalize_h.html  geo_print_c-source.html  geo_set_c-source.html  (+52 more)
geotiff/html/proj_list/: albers_equal_area_conic.html  azimuthal_equidistant.html  cassini_soldner.html  cylindrical_equal_area.html  eckert_iv.html  eckert_vi.html  epsg_om.html  equidistant_conic.html  equirectangular.html  gall_stereographic.html  geos.html  gnomonic.html  guid7.html  hotine_oblique_mercator.html  index.html  krovak.html  laborde_oblique_mercator.html  lambert_azimuthal_equal_area.html  lambert_conic_conformal_1sp.html  lambert_conic_conformal_2sp.html  lambert_conic_conformal_2sp_belgium.html  mercator_1sp.html  mercator_2sp.html  miller_cylindrical.html  mollweide.html  new_zealand_map_grid.html  oblique_mercator.html  oblique_stereographic.html  orthographic.html  polar_stereographic.html  polyconic.html  principles.html  random_issues.html  robinson.html  rosenmund_oblique_mercator.html  sinusoidal.html  stereographic.html  swiss_oblique_cylindrical.html  transverse_mercator.html  transverse_mercator_modified_alaska.html  (+3 more)
geotiff/html/spec/: contents.html  geotiff.rtf  geotiff1.html  geotiff2.1.html  geotiff2.2.html  geotiff2.3.html  geotiff2.4.html  geotiff2.5.html  geotiff2.6.html  geotiff2.7.html  geotiff2.html  geotiff3.html  geotiff4.html  geotiff5.html  geotiff6.html  geotiff7.html  geotiffhome.html
geotiff/libgeotiff/: .cvsignore  ChangeLog  Doxyfile  HOWTO-RELEASE  LICENSE  Makefile.in  README  README.WIN  aclocal.m4  config.guess  configure  configure.in  cpl_csv.c  cpl_csv.h  cpl_csv_incode.c  cpl_serv.c  cpl_serv.h  epsg_gcs.inc  epsg_pcs.inc  geo_config.h.in  geo_config.h.vc  geo_ctrans.inc  geo_extra.c  geo_names.c  geo_new.c  geo_normalize.c  geo_normalize.h  geo_print.c  geo_set.c  geo_simpletags.c  geo_simpletags.h  geo_tiffp.h  geo_trans.c  geo_write.c  geotiff.h  geotiff_proj4.c  makefile.mpw  makefile.vc  mkbindist.sh  mkdist.sh
geotiff/libgeotiff/csv/: README  add_esri_column.py  alias.csv  area.csv  build_pcs.py  build_spm.py  change.csv  codes.csv  compd_cs.c  coordinate_axis.csv  coordinate_axis_name.csv  coordinate_operation.csv  coordinate_operation_method.csv  coordinate_operation_parameter.csv  coordinate_operation_parameter_value.csv  coordinate_operation_path.csv  coordinate_reference_system.csv  coordinate_system.csv  csv.txt  csv2c.pl  csv2c.py  csv_tools.py  datum.c  datum.csv  deprecation.csv  ellips_alias.c  ellips_alias.csv  ellipsoid.c  ellipsoid.csv  gcs.c  gcs.override.csv  gdatum_alias.c  gdatum_alias.csv  geod_datum.c  geod_datum.csv  geod_trf.c  geod_trf.csv  geoparms.csv  horiz_cs.c  horiz_cs.csv  (+31 more)
geotiff/libgeotiff/csv/odbc2csv/: README  dumpepsg.bat  odbc2csv.cpp  sqlcolumn.cpp  sqldirect.cpp
geotiff/libgeotiff/docs/: listgeo.html  manual.txt
geotiff/libgeotiff/libtiff_private/: README  port.h
geotiff/libgeotiff/libxtiff/: xtiff.c  xtiffio.h
geotiff/spec/: VERSION  geotiff.rtf
geotiff/tables/: ELLIPS.CSV  GEOGCS.CSV  PMERID.CSV  PROJ.CSV  PROJCS.CSV  README  README.TXT  UNITS.CSV  VERTCS.CSV  changes.txt  code_ndx.csv
libgeotiff/: .gitignore  CMakeLists.txt  ChangeLog  HOWTO-RELEASE  LICENSE  Makefile.am  NEWS  README  aclocal.m4  autogen.sh  configure  configure.ac  cpl_csv_incode.c  cpl_serv.c  cpl_serv.h  geo_config.h.in  geo_config.h.vc  geo_ctrans.inc  geo_extra.c  geo_get.c  geo_keyp.h  geo_new.c  geo_normalize.c  geo_normalize.h  geo_print.c  geo_simpletags.c  geo_strtod.c  geo_tiffp.h  geo_trans.c  geokeys.inc  geotiff.h  geotiff_proj4.c  libgeotiff.pc.in  makefile.vc  mkdist.sh
libgeotiff/cmake/: CMakeLists.txt  FindPROJ.cmake  Makefile.am  geo_config.h.in  project-config.cmake.in
libgeotiff/csv/: Dockerfile  README  add_esri_column.py  area.csv  build_pcs.py  coordinate_axis_name.csv  coordinate_operation.csv  coordinate_operation_method.csv  coordinate_operation_parameter.csv  coordinate_operation_parameter_value.csv  coordinate_operation_path.csv  coordinate_reference_system.csv  coordinate_system.csv  csv2c.py  csv_tools.py  datum.csv  datum_shift.csv  datum_shift_pref.csv  extract_docker_artifacts.sh  gcs.c  gcs.csv  gcs.override.csv  load_pg.sh  pg_to_csv.py  prime_meridian.c  projop_wparm.c  supersession.csv  vertcs.override.csv
libgeotiff/csv/odbc2csv/: README  makefile  sqlcolumn.h  sqldirect.h
libgeotiff/docs/: Doxyfile  listgeo.html  manual.txt
libgeotiff/libxtiff/: Makefile.am  xtiff.c
libgeotiff/test/: Makefile.am  testgeotifcp  testgeotifcp_out.dist  testlistgeo  testlistgeo_out.dist
